scss/welcome-page.scss
/**
 * @author Jan G. Wieners
 */

.navbar-default > #homepage-search {
  background-color: transparent !important;
}

#homepage-search {

  height: 85vh;

  display: flex;

  margin-top: -50px;
  margin-left: -15px !important;
  margin-right: -15px !important;

  background-image: url(../img/frontpage/home-bgr.jpg);
  background-size: cover;
  background-position: top left;
  background-repeat: no-repeat;

  color: #ddd;
  font-weight: lighter !important;
  font-size: 16px;

  .form-control, .btn {
    border-radius: 1px;
    height: 45px;
  }

  .form-control {
    line-height: 25px;
  }

  .form-control:focus {
    border: none;
  }

  a {
    color: #ddd;
  }

  .list-inline {
    margin-top: 9px;
  }

  .list-inline a span {
    margin-right: 7px;
  }

  .triangle {

    margin-top: 70vh;
    bottom: 0;
    width: 100%;
    height: 0;
    z-index: 15;
    -webkit-transform: rotate(360deg);
    border-style: solid;
    border-width: 0 0 50px 700px;
    border-color: transparent transparent #ffffff transparent;
  }

  #arachne-search {

    margin: 50px auto 0 auto;
    height: 262px;
    min-width: 375px;
    max-width: 460px;
    position: relative;
    top: 30%;
    transform: translateY(-30%);
  }

  img#arachne-logo {

    opacity: 1;
    border-radius: 1px;
    height: 100px;
    margin-right: 15px;
    vertical-align: baseline;
    box-sizing: inherit;
  }

  #arachne-brand {

    color: #eee;
    font-weight: 300;
    font-size: 65px;
    margin-bottom: 15px;
    padding-top: 0;
    display: inline-block;
  }

  #arachne-brand #brand-top {

    font-weight: 300;
    margin-left: 2px;
    color: #999;
    top: 10px;
    position: relative;
    font-size: 35px;
  }

  #arachne-brand #brand-bottom {

    top: -10px;
    position: relative;
  }
}

#categories-teaser {

  margin: 0 -15px;
  padding: 0;

  .row {
    margin: 0;
    padding: 0;
  }

  .col-xs-2 {
    cursor: pointer;
    padding: 0;
  }

  img {
    cursor: pointer;
    position:relative;
  }

  .col-xs-2:hover .category-title {
    opacity: 1;
  }

  .category-title {

    position: absolute;
    top: 0;
    text-align: center;
    opacity: 0;
    background-color: rgba(0, 0, 0, 0.5);
    -webkit-transition: opacity 0.25s ease-in-out;
    width: 100%;
    height: 100%;
    padding: 10px;
    color: #fff;
    font-weight: lighter;
    font-size: 1.2em;

    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
  }
}

#projects-teaser {

  .row {
    margin-top: 0;
  }

  h2 {
    font-size: 2.5em;
    font-weight: lighter;
  }

  a {
    color: #333;
  }

  a:hover {
    text-decoration: none;
    color: #777;
  }

  .teasertext {
    padding: 75px 85px;
    font-size: 17px;
    font-weight: lighter;
  }

  .teaserimage-right {
    padding-right: 0 !important;
    padding-left: 0;
  }

  .teaserimage-left {
    padding-right: 0;
    padding-left: 0 !important;
  }

  .all-projects {
    text-align: center;
    padding: 95px 0 0 0;
  }

  .all-projects .btn {
  }

  img {
    -webkit-transition: opacity 0.25s ease-in-out;
    opacity: 1;
  }

  img:hover {
    opacity: 0.7;
  }

  // Just for you, dearest safari browser
  .row:before,
  .row:after {
    display: none;
  }
}

.row.is-flex {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  align-items: center !important;
}

.row.is-flex > [class*='col-'] {
  display: flex;
  flex-direction: column;
}

.row.is-flex {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.row.is-flex > [class*='col-'] {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

